Update questionnaire description in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function render(html, progress=0) {
  *************************************************/
 render(`
   <h1>Activité physique</h1>
-  <p>Questionnaire destiné à préparer votre consultation médicale.<br>Aucune donnée n'est enregistrée.</p>
+  <p>Je vous propose de répondre à ce questionnaire pour préparer votre consultation médicale. Commencez par répondre à l'un de ces 2 questionnaires pour mesurer votre niveau d'activité physique. L'idéal est de choisir le questionnaire GPAQ plus détaillé.<br>Aucune donnée n'est enregistrée.</p>
   <button class="btn" onclick="start('gpaq')">Questionnaire détaillé (GPAQ – 2 à 3 min)</button>
   <button class="btn secondary" onclick="start('marshall')">Questionnaire court (Marshall – 30 sec)</button>
 `);
