Revise questionnaire hosting details and privacy link
Updated the text to clarify data storage and added a link to the privacy policy.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@ render(`
   <h1>Activité physique</h1>
   <p>Questionnaire destiné à préparer votre consultation médicale.<br>Aucune donnée n'est enregistrée.</p>
   <div class="rgpd-banner">
-    Ce questionnaire est hébergé sur GitHub et ne stocke pas vos données. Vous pouvez l'imprimer pour usage personnel ou médical.
-    <a href="#" target="_blank">Politique de confidentialité</a>
-  </div>
+  Ce questionnaire est hébergé sur GitHub Pages et ne stocke aucune donnée personnelle.
+  Les réponses restent uniquement sur votre appareil.
+  <a href="https://abbe-web.github.io/Questionnaire-AutoEvaluation-AP/politique-confidentialite.html"
+     target="_blank" rel="noopener noreferrer">
+     Politique de confidentialité
+  </a>
+</div>
   <button class="btn" onclick="start('gpaq')">Questionnaire détaillé (GPAQ)</button>
   <button class="btn secondary" onclick="start('marshall')">Questionnaire court (Marshall)</button>
 `);
